--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Pyplane is a software for phase plane analysis of second order dynamical systems.
+Pyplane is a free software for phase plane analysis of second order dynamical systems written in PYTHON and QT4.
