Updated AUTHORS and README

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,2 +1,3 @@
 Klemens Fritzsche <pyplane@leckstrom.de>
-Carsten Knoll
+Jan Winkler <jan.winkler@tu-dresden.de>
+Carsten Knoll <carsten.knoll@tu-dresden.de>
