--- a/README
+++ b/README
@@ -1,8 +1,12 @@
-pyplane is a free software for phase plane analysis of second order dynamical systems written in PYTHON and QT4.
+PyPlane is a free software for phase plane analysis of second order dynamical systems written in PYTHON and QT4.
 While having less features, it  aims to be a (partial) replacement for Matlabs pplane.
 
-It was developed by Klemens Fritsche in 2013 and 2014 at the Institute of Control Theory [1], Technische Universität Dresden.
-Supervisors: Carsten Knoll, Jan Winkler
+It has been originally developed by Klemens Fritsche in 2013 and 2014 at the 
+Institute of Control Theory [1], Technische Universität Dresden. Supervisors: Carsten Knoll, Jan Winkler
 
+Since 2015 it is maintained and developed by Klemens Fritsche and Jan Winkler at the 
+Institute of Control Theory [1]
+
+It is published under the GNU GENERAL PUBLIC LICENSE Version 3.
 
 [1] http://www.et.tu-dresden.de/rst/
